[package]
name = "neoiot_core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.16.1", features = ["rt-multi-thread", "macros"] }
poem = { version = "1.2.53", features = ["compression", "anyhow"] }
poem-openapi = { version = "1.2.53", features = [
  "chrono",
  "swagger-ui",
  "redoc",
  "rapidoc",
  "email",
] }
chrono = "0.4.19"
anyhow = "1.0.53"
config = "0.11.0"
rand = "0.8.4"
serde = "1.0.136"
serde_derive = "1.0.136"
lazy_static = "1.4.0"
sea-orm = { version = "0.6.0", features = [
  "sqlx-postgres",
  "runtime-tokio-rustls",
  "macros",
], default-features = false }
xid = "1.0.0"
argon2 = "0.3.3"
rand_core = { version = "0.6.3", features = ["std"] }
tracing-subscriber = "0.3.8"
itertools = "0.10.3"
jwt-simple = "0.10.8"
thiserror = "1.0.30"

[build-dependencies]
# tonic-build = "0.6.2"
