[package]
name = "neoiot_core"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "entity", "migration"]

[dependencies]
tokio = { version = "1.18.5", features = ["rt-multi-thread", "macros"] }
poem = { version = "1.3.19", features = ["compression", "anyhow"] }

poem-openapi = { version = "1.3.19", features = [
  "chrono",
  "swagger-ui",
  "redoc",
  "rapidoc",
  "email",
] }
reqwest = { version = "0.11.10", features = ["json"] }
redis = { version = "0.21.5", features = ["tokio-comp"] }
chrono = "0.4.19"
config = "0.12.0"
rand = "0.8.5"
serde = "1.0.136"
serde_derive = "1.0.136"
serde_json = "1.0.79"
lazy_static = "1.4.0"

pulsar = "4.1.1"

xid = "1.0.0"
argon2 = "0.4.0"
rand_core = { version = "0.6.3", features = ["std"] }
tracing-subscriber = "0.3.9"
itertools = "0.10.3"
jwt-simple = "0.10.8"
thiserror = "1.0.30"
entity = { path = "entity" }
migration = { path = "migration" }

[build-dependencies]
# tonic-build = "0.6.2"
