[package]
name = "entity"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "entity"
path = "src/mod.rs"

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
sea-orm = { version = "0.7.1", features = [
  "sqlx-postgres",
  "runtime-tokio-rustls",
  "macros",
], default-features = false }

poem-openapi = "1.3.19"
